--- a/charts/brp-personen-mock/templates/personenmock-serviceaccount.yaml
+++ b/charts/brp-personen-mock/templates/personenmock-serviceaccount.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "bm.name" . }}-serviceaccount
+  name: brp-personen-mock
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
-    app.kubernetes.io/name: {{ include "bm.name" . }}-serviceaccount
-    {{- include "bm.labels" . | nindent 4 }}
+    app.kubernetes.io/instance: podiumd
+    app.kubernetes.io/name: brp-personen-mock
