--- a/charts/monitoring-logging/Chart.yaml
+++ b/charts/monitoring-logging/Chart.yaml
@@ -1,10 +1,12 @@
 apiVersion: v2
 name: monitoring
-description: A monitoring stack using Loki, Promtail, OpenTelemetry and Grafana
+description: A monitoring stack using Loki, Promtail and Grafana
 type: application
 version: 0.1.0
 appVersion: "1.0"
   - name: loki
     repository: "https://grafana.github.io/helm-charts"
   - name: promtail
+    repository: "https://grafana.github.io/helm-charts"
+  - name: grafana
     repository: "https://grafana.github.io/helm-charts"
