--- a/charts/monitoring-logging/Chart.yaml
+++ b/charts/monitoring-logging/Chart.yaml
@@ -6,11 +6,14 @@ version: 0.1.0
 appVersion: "1.0"
 dependencies:
   - name: loki
+  - repository: "https://grafana.github.io/helm-charts"
     version: 3.4.2
-    repository: "https://grafana.github.io/helm-charts"
+    condition: loki.enabled
   - name: promtail
     repository: "https://grafana.github.io/helm-charts"
     version: 3.0.0
+    condition: promtail.enabled
   - name: grafana
     repository: "https://grafana.github.io/helm-charts"
     version: 11.5.2
+    condition: grafana.enabled
