--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -62,15 +62,65 @@ grafana:
   dashboards: 
     default: 
       Logging_PodiumD:
-        url: https://github.com/Dimpact-Samenwerking/helm-charts/bl
+        url: https://github.com/Dimpact-Samenwerking/helm-charts/blob/feature/IN-72_monitoring-logging/charts/monitoring-logging/grafana/dashboards/logging_PodiumD.json
+        token: ''
+        datasource: Loki
 
+  dashboardsConfigMaps:
+    default: "loki-dashboard"
 
-  persistence:
-    enabled: true
-    accessModes:
-    - ReadWriteOnce
-    size: 50Gi
-    type: pvc
+  grafana.ini:
+    server:
+      root_url: https://REP_DOMAIN_REP
+    database:
+      type: postgres
+      host: psql-REP_ENVIRONMENT_REP-REP_GEMEENTE_REP.postgres.database.azure.com:5432
+      name: grafana
+      user: grafana
+      password: $__env{gf-database-password}
+      ssl_mode: require
+    dataproxy:
+      timeout: 300
+      keep_alive_seconds: 300
+    smtp:
+      enabled: true
+      host: mail.enschede.nl:587
+      # existingSecret: ""
+      from_address: noreply@REP_GRAFANA_DOMAIN_REP
+      # passwordKey: ""
+      # userKey: ""
+      skip_verify: true
+    auth.azuread:
+      name: Azure AD
+      enabled: true
+      allow_sign_up: true
+      auto_login: true
+      client_id: REP_GRAFANA_ID_REP
+      client_secret: $__env{gf-client-secret}
+      scopes: openid email profile
+      auth_url: https://login.microsoftonline.com/996a05f9-6875-4960-a833-6e3aff171400/oauth2/v2.0/authorize
+      token_url: https://login.microsoftonline.com/996a05f9-6875-4960-a833-6e3aff171400/oauth2/v2.0/token
+      allowed_domains:
+      allowed_groups:
+      allowed_organizations: 996a05f9-6875-4960-a833-6e3aff171400
+      role_attribute_strict: false
+      allow_assign_grafana_admin: true
+      skip_org_role_sync: false
+      use_pkce: true
+    auth.basic:
+      enabled: false  # Disable standard login
+      disable_login_form: true
+      allow_sign_up: false
+    metrics:
+      enabled: false
+    dashboards:
+      default_home_dashboard_path: /var/lib/grafana/dashboards/default/loki-dashboard.json
+
+  initChownData:
+    image:
+      registry: REP_ACR_NAME_REP.azurecr.io
+      repository: grafana-init-chown-data
+      tag: 1.31.1
 
 promtail:
   image:
