--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -16,7 +16,7 @@ grafana:
         - name: Loki
           editable: false
           type: loki
-          url: http://loki:3100
+          url: http://loki-loki-gateway
           isDefault: true
           jsonData:
             timeout: 300
