--- a/charts/monitoring-logging/Chart.yaml
+++ b/charts/monitoring-logging/Chart.yaml
@@ -6,7 +6,7 @@ version: 0.1.0
 appVersion: "1.0"
 dependencies:
   - name: loki
-  - repository: "https://grafana.github.io/helm-charts"
+    repository: "https://grafana.github.io/helm-charts"
     version: 3.4.2
     condition: loki.enabled
   - name: promtail
