--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -1,4 +1,5 @@
 grafana:
+  enabled: true
   image:
     registry: REP_ACR_NAME_REP.azurecr.io
     repository: grafana
@@ -16,7 +17,7 @@ grafana:
         - name: Loki
           editable: false
           type: loki
-          url: http://loki-loki-gateway
+          url: http://loki-gateway
           isDefault: true
           jsonData:
             timeout: 300
@@ -62,7 +63,7 @@ grafana:
   dashboards: 
     default: 
       Logging_PodiumD:
-        url: https://github.com/Dimpact-Samenwerking/helm-charts/blob/feature/IN-72_monitoring-logging/charts/monitoring-logging/grafana/dashboards/logging_PodiumD.json
+        url: https://raw.githubusercontent.com/Dimpact-Samenwerking/helm-charts/refs/heads/feature/IN-72_monitoring-logging/charts/monitoring-logging/grafana/dashboards/logging_PodiumD.json
         token: ''
         datasource: Loki
 
@@ -123,6 +124,7 @@ grafana:
       tag: 1.31.1
 
 promtail:
+  enabled: true
   image:
     registry: REP_ACR_NAME_REP.azurecr.io
     repository: promtail
@@ -136,6 +138,8 @@ promtail:
       memory: 256Mi
       
 loki:
+  enabled: true
+  auth_enabled: false
   deploymentMode: Distributed
 
   ingester:
