--- a/charts/podiumd/templates/create-required-catalogi.yaml
+++ b/charts/podiumd/templates/create-required-catalogi.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.openzaak.enabled }}
+{{- if .Values.openzaak.configuration.enabled }}
 {{- if .Values.openzaak.create_required_catalogi_job.enabled }}
 apiVersion: v1
 kind: ConfigMap
