--- a/charts/podiumd/templates/create-required-objecttypen.yaml
+++ b/charts/podiumd/templates/create-required-objecttypen.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.objecttypen.enabled }}
+{{- if .Values.objecttypen.configuration.enabled }}
 {{- if .Values.objecttypen.create_required_objecttypen_job.enabled }}
 apiVersion: v1
 kind: ConfigMap
