--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -139,49 +139,6 @@ promtail:
       
 loki:
   enabled: true
-  deploymentMode: Distributed
-
-  ingester:
-    replicas: 3
-  querier:
-    replicas: 3
-    maxUnavailable: 2
-  queryFrontend:
-    replicas: 2
-    maxUnavailable: 1
-  queryScheduler:
-    replicas: 2
-  distributor:
-    replicas: 3
-    maxUnavailable: 2
-  compactor:
-    replicas: 1
-  indexGateway:
-    replicas: 2
-    maxUnavailable: 1
-
-  # Optional experimental components
-  bloomPlanner:
-    replicas: 0
-  bloomBuilder:
-    replicas: 0
-  bloomGateway:
-    replicas: 0
-
-  # Zero out replica counts of other deployment modes
-  backend:
-    replicas: 0
-  read:
-    replicas: 0
-  write:
-    replicas: 0
-  singleBinary:
-    replicas: 0
-
-  image:
-    registry: REP_ACR_NAME_REP.azurecr.io
-    repository: loki
-    tag: "3.4.2"
   schemaConfig:
     configs:
       - from: 2024-04-01
@@ -191,6 +148,58 @@ loki:
         index:
           prefix: index_
           period: 24h
+  ingester:
+    chunk_encoding: snappy
+  tracing:
+    enabled: true
+  querier:
+    # Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
+    max_concurrent: 4
+    
+deploymentMode: Distributed
+
+ingester:
+  replicas: 3
+
+querier:
+  replicas: 3
+  maxUnavailable: 2
+queryFrontend:
+  replicas: 2
+  maxUnavailable: 1
+queryScheduler:
+  replicas: 2
+distributor:
+  replicas: 3
+  maxUnavailable: 2
+compactor:
+  replicas: 1
+indexGateway:
+  replicas: 2
+  maxUnavailable: 1
+
+# Optional experimental components
+bloomPlanner:
+  replicas: 0
+bloomBuilder:
+  replicas: 0
+bloomGateway:
+  replicas: 0
+  
+# Zero out replica counts of other deployment modes
+backend:
+  replicas: 0
+read:
+  replicas: 0
+write:
+  replicas: 0
+singleBinary:
+  replicas: 0
+
+  image:
+    registry: REP_ACR_NAME_REP.azurecr.io
+    repository: loki
+    tag: "3.4.2"
   storage:
     bucketNames:
       chunks: chunks
@@ -202,6 +211,8 @@ loki:
       container: logs
       request_timeout: 0
   auth_enabled: false
+  frontend:
+    max_outstanding_per_tenant: 4096
 
 gateway:
   enabled: true
