--- a/charts/monitoring-logging/loki/values.yaml
+++ b/charts/monitoring-logging/loki/values.yaml
@@ -1,10 +1,26 @@
----
-# https://github.com/grafana/loki/blob/main/production/helm/loki/values.yaml
-
+loki:
+  schemaConfig:
+    configs:
+      - from: 2024-04-01
+        object_store: azure
+        store: tsdb
+        schema: v13
+        index:
+          prefix: index_
+          period: 24h
+  ingester:
+    chunk_encoding: snappy
+  tracing:
+    enabled: true
+  querier:
+    # Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
+    max_concurrent: 4
+    
 deploymentMode: Distributed
 
 ingester:
   replicas: 3
+
 querier:
   replicas: 3
   maxUnavailable: 2
@@ -22,14 +38,14 @@ indexGateway:
   replicas: 2
   maxUnavailable: 1
 
-# optional experimental components
+# Optional experimental components
 bloomPlanner:
   replicas: 0
 bloomBuilder:
   replicas: 0
 bloomGateway:
   replicas: 0
-
+  
 # Zero out replica counts of other deployment modes
 backend:
   replicas: 0
@@ -37,24 +53,13 @@ read:
   replicas: 0
 write:
   replicas: 0
-
 singleBinary:
   replicas: 0
 
-loki:
   image:
     registry: REP_ACR_NAME_REP.azurecr.io
     repository: loki
-    tag: "3.1.0"
-  schemaConfig:
-    configs:
-      - from: 2024-04-01
-        object_store: azure
-        store: tsdb
-        schema: v13
-        index:
-          prefix: index_
-          period: 24h
+    tag: "3.4.2"
   storage:
     bucketNames:
       chunks: chunks
@@ -66,6 +71,8 @@ loki:
       container: logs
       request_timeout: 0
   auth_enabled: false
+  frontend:
+    max_outstanding_per_tenant: 4096
 
 gateway:
   enabled: true
