--- a/charts/podiumd/templates/frontend-secret.yaml
+++ b/charts/podiumd/templates/frontend-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -37,3 +38,5 @@ stringData:
   VAC_OBJECTEN_TOKEN: {{ .Values.kiss.vac.objectenToken | quote }}
   ZAKEN_API_CLIENT_ID: {{ .Values.kiss.adapter.clientId | quote }}
   ZAKEN_API_KEY: {{ .Values.kiss.adapter.secret | quote }}
+
+{{- end }}
