--- a/charts/monitoring-logging/Chart.yaml
+++ b/charts/monitoring-logging/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: monitoring en logging
 description: A monitoring stack using Loki, Promtail and Grafana
 type: application
-version: 0.1.0
-appVersion: "1.0"
+version: 0.1.0-dev
+appVersion: "1.0-dev"
 dependencies:
   - name: loki
     repository: "https://grafana.github.io/helm-charts"
