--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -170,7 +170,7 @@ loki:
   tracing:
     enabled: true
   querier:
-    # Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
+    # -- Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
     max_concurrent: 4
     
 deploymentMode: Distributed
@@ -195,7 +195,7 @@ indexGateway:
   replicas: 2
   maxUnavailable: 1
 
-# Optional experimental components
+# -- Optional experimental components
 bloomPlanner:
   replicas: 0
 bloomBuilder:
@@ -203,7 +203,7 @@ bloomBuilder:
 bloomGateway:
   replicas: 0
   
-# Zero out replica counts of other deployment modes
+# -- Zero out replica counts of other deployment modes
 backend:
   replicas: 0
 read:
@@ -243,7 +243,7 @@ resultsCache:
 chunksCache:
   enabled: false
 
-# Keep log data up to 3 months
+# -- Keep log data up to 3 months
 table_manager:
   retention_deletes_enabled: true
   retention_period: 90d
