--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -248,6 +248,9 @@ table_manager:
   retention_deletes_enabled: true
   retention_period: 90d
 
+chunksCache:
+  allocatedMemory: 512
+  
 monitoring:
   selfMonitoring:
     enabled: false
