--- a/charts/monitoring-logging/loki/values.yaml
+++ b/charts/monitoring-logging/loki/values.yaml
@@ -33,6 +33,13 @@ loki:
     # -- Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
     max_concurrent: 4
     
+  limits_config:
+    ingestion_rate_strategy: local # Default: global
+    max_global_streams_per_user: 5000
+    max_query_length: 0h # Default: 721h
+    max_query_parallelism: 32 # Old Default: 14
+    max_streams_per_user: 0 # Old Default: 10000
+    
 deploymentMode: Distributed
 
 ingester:
