--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -152,6 +152,7 @@ loki:
         index:
           prefix: index_
           period: 24h
+          
   storage:
     bucketNames:
       chunks: chunks
@@ -164,43 +165,81 @@ loki:
       request_timeout: 0
   auth_enabled: false
   frontend:
-    max_outstanding_per_tenant: 4096
+    max_outstanding_per_tenant: 6144 # Queue size for parallel processing
+    
   ingester:
     chunk_encoding: snappy
+    chunk_idle_period: 30m # Flush chunks faster = less memory
+    wal:
+      enabled: true # Prevent data loss
+      dir: /var/loki/wal
+      
   tracing:
-    enabled: true
+    enabled: false
+    
   querier:
-    # -- Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
-    max_concurrent: 4
+    max_concurrent: 6 # Per-pod parallelism
+    timeout: 10m # Fail fast on slow queries
+    
+  # -- Query Performance  
   limits_config:
-    ingestion_rate_strategy: local # Default: global
-    max_global_streams_per_user: 5000
-    max_query_length: 0h # Default: 721h
-    max_query_parallelism: 32 # Old Default: 14
-    max_streams_per_user: 0 # Old Default: 10000
+    ingestion_rate_strategy: local
+    max_global_streams_per_user: 10000
+    max_query_parallelism: 48 # Utilize Azure's high throughput
+    max_streams_per_user: 0 # Old Default: 10000 
+    split_queries_by_interval: 6h # Smaller splits = faster parallelization
     
 deploymentMode: Distributed
 
 ingester:
-  replicas: 3
+  replicas: 2 # 2-3 for HA, fewer for cost
+  maxUnavailable: 1 # 1/2 pods can update at once
+  resources:
+    requests:
+      cpu: 1
+      memory: 2Gi
+    limits:
+      cpu: 2
+      memory: 4Gi
 
 querier:
-  replicas: 3
-  maxUnavailable: 2
+  replicas: 3 # Scale based on query load
+  maxUnavailable: 2 # 2/3 pods unavailable during updates
+  resources:
+    requests:
+      cpu: 2
+      memory: 4Gi
+    limits:
+      cpu: 4
+      memory: 8Gi
+      
 queryFrontend:
   replicas: 2
-  maxUnavailable: 1
+  maxUnavailable: 1 # 1/2 pods can update
+  resources:
+    requests:
+      cpu: 1
+      memory: 2Gi
+      
 queryScheduler:
   replicas: 2
+  maxUnavailable: 1 # 1/2 pods unavailable
+  
 distributor:
   replicas: 3
-  maxUnavailable: 2
+  maxUnavailable: 2 # 2/3 pods down during updates
+  
 compactor:
   replicas: 1
+  maxUnavailable: 0 # Zero downtime for single-replica
+  
 indexGateway:
   replicas: 2
-  maxUnavailable: 1
-
+  maxUnavailable: 1 # 1/2 pods can update
+  resources:
+    requests:
+      memory: 2Gi
+      
 # -- Optional experimental components
 bloomPlanner:
   replicas: 0
@@ -243,19 +282,21 @@ sidecar:
   dashboards:
     skipReload: true
 
+# -- Caching --
 resultsCache:
-  enabled: false
-
+  enabled: true
+  defaultValidity: 6h
+  
 chunksCache:
-  enabled: false
-
+  enabled: true
+  defaultValidity: 6h # Shorter TTL = fresher results
+  allocatedMemory: 1536
+  defaultValidity: 8h
+  
 # -- Keep log data up to 3 months
 table_manager:
   retention_deletes_enabled: true
   retention_period: 90d
-
-chunksCache:
-  allocatedMemory: 512
   
 monitoring:
   selfMonitoring:
