--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -166,20 +166,39 @@ loki:
   auth_enabled: false
   frontend:
     max_outstanding_per_tenant: 6144 # Queue size for parallel processing
-    
+
+  config: 
+    compactor:
+      shared_store: azure
+      working_directory: /var/loki/compactor
+      
   ingester:
     chunk_encoding: snappy
     chunk_idle_period: 30m # Flush chunks faster = less memory
     wal:
       enabled: true # Prevent data loss
       dir: /var/loki/wal
+    resources:
+      requests:
+        cpu: 1
+        memory: 2Gi
+      limits:
+        cpu: 2
+        memory: 8Gi
       
   tracing:
     enabled: false
     
   querier:
-    max_concurrent: 6 # Per-pod parallelism
+    max_concurrent: 8 # Per-pod parallelism
     timeout: 10m # Fail fast on slow queries
+    resources:
+      requests:
+        cpu: 2
+        memory: 4Gi
+      limits:
+        cpu: 4
+        memory: 8Gi
     
   # -- Query Performance  
   limits_config:
@@ -204,7 +223,7 @@ ingester:
 
 querier:
   replicas: 3 # Scale based on query load
-  maxUnavailable: 2 # 2/3 pods unavailable during updates
+  maxUnavailable: 1 # 1/3 pods unavailable during updates
   resources:
     requests:
       cpu: 2
@@ -227,7 +246,7 @@ queryScheduler:
   
 distributor:
   replicas: 3
-  maxUnavailable: 2 # 2/3 pods down during updates
+  maxUnavailable: 1 # 1/3 pods down during updates
   
 compactor:
   replicas: 1
@@ -239,6 +258,10 @@ indexGateway:
   resources:
     requests:
       memory: 2Gi
+  index_cache:
+    enable_fifocache: true
+    fifocache:
+      max_size_bytes: 1073741824
       
 # -- Optional experimental components
 bloomPlanner:
@@ -289,9 +312,8 @@ resultsCache:
   
 chunksCache:
   enabled: true
-  defaultValidity: 6h # Shorter TTL = fresher results
-  allocatedMemory: 1536
-  defaultValidity: 8h
+  defaultValidity: 8h # Shorter TTL = fresher results
+  allocatedMemory: 1024
   
 # -- Keep log data up to 3 months
 table_manager:
