--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -166,24 +166,20 @@ loki:
   auth_enabled: false
   frontend:
     max_outstanding_per_tenant: 6144 # Queue size for parallel processing
-
-  config: 
-    compactor:
-      shared_store: azure
-      working_directory: /var/loki/compactor
-      
+    
   ingester:
     chunk_encoding: snappy
     chunk_idle_period: 30m # Flush chunks faster = less memory
     wal:
+      enabled: true # Prevent data loss
       dir: /var/loki/wal
+      
   tracing:
     enabled: false
     
   querier:
-    max_concurrent: 8 # Per-pod parallelism
+    max_concurrent: 6 # Per-pod parallelism
     timeout: 10m # Fail fast on slow queries
-
     
   # -- Query Performance  
   limits_config:
@@ -198,14 +194,32 @@ deploymentMode: Distributed
 ingester:
   replicas: 2 # 2-3 for HA, fewer for cost
   maxUnavailable: 1 # 1/2 pods can update at once
+  resources:
+    requests:
+      cpu: 1
+      memory: 2Gi
+    limits:
+      cpu: 2
+      memory: 4Gi
 
 querier:
   replicas: 3 # Scale based on query load
-  maxUnavailable: 1 # 1/3 pods unavailable during updates
+  maxUnavailable: 2 # 2/3 pods unavailable during updates
+  resources:
+    requests:
+      cpu: 2
+      memory: 4Gi
+    limits:
+      cpu: 4
+      memory: 8Gi
       
 queryFrontend:
   replicas: 2
   maxUnavailable: 1 # 1/2 pods can update
+  resources:
+    requests:
+      cpu: 1
+      memory: 2Gi
       
 queryScheduler:
   replicas: 2
@@ -213,7 +227,7 @@ queryScheduler:
   
 distributor:
   replicas: 3
-  maxUnavailable: 1 # 1/3 pods down during updates
+  maxUnavailable: 2 # 2/3 pods down during updates
   
 compactor:
   replicas: 1
@@ -222,6 +236,9 @@ compactor:
 indexGateway:
   replicas: 2
   maxUnavailable: 1 # 1/2 pods can update
+  resources:
+    requests:
+      memory: 2Gi
       
 # -- Optional experimental components
 bloomPlanner:
@@ -272,8 +289,9 @@ resultsCache:
   
 chunksCache:
   enabled: true
-  defaultValidity: 8h # Shorter TTL = fresher results
-  allocatedMemory: 1024
+  defaultValidity: 6h # Shorter TTL = fresher results
+  allocatedMemory: 1536
+  defaultValidity: 8h
   
 # -- Keep log data up to 3 months
 table_manager:
@@ -295,4 +313,3 @@ test:
 
 lokiCanary:
   enabled: false
-
